# cli-tool

./: main.py  mypy.ini  pyproject.toml  testfile.txt
