[tool.poetry]
name = "Telnyx-challenge"
version = "0.0.0"
description = ""
authors = ["gabriel-viviani <gabrielviviani98@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.2"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
asyncclick = "^7.1.2"
aiofiles = "^0.6.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
